# hs-rpal

./: .gitignore  BUGS  Lexer.hs  Makefile  Parser.hs  README.md  hs-rpal.cabal  hsRpal.hs
Parser/: Ast.hs  Utils.hs
src/: Evaluator.hs  Lexer.hs  OptionHandler.hs  Standardizer.hs  hsRpal.hs  hsRpalCompat.hs
src/Evaluator/: Control.hs  Environment.hs
src/Parser/: Ast.hs  Utils.hs
